package com.cjj.designpattern.behavioral.command;

/**
 * Created by chenjj on 2019/1/2
 */
public interface Command {
    public abstract void execute();
}
