package com.cjj.designpattern.behavioral.command;

import com.cjj.designpattern.behavioral.command.drawer.DrawCanvas;
import com.cjj.designpattern.behavioral.command.drawer.DrawCommand;

import javax.swing.*;
import java.awt.event.*;

/**
 * Created by chenjj on 2019/1/2
 */
public class Main extends JFrame implements ActionListener,MouseMotionListener,WindowListener {

    private MacroCommand history=new MacroCommand();
    private DrawCanvas canvas=new DrawCanvas(400,400,history);
    private JButton clearButton=new JButton("clear");

    public Main(String title){
        super(title);
        this.addWindowListener(this);
        canvas.addMouseMotionListener(this);
        clearButton.addActionListener(this);

        Box buttonBox=new Box(BoxLayout.X_AXIS);
        buttonBox.add(clearButton);
        Box mainBox=new Box(BoxLayout.Y_AXIS);
        mainBox.add(clearButton);
        mainBox.add(canvas);
        getContentPane().add(mainBox);
        pack();
        show();
    }

    @Override
    public void actionPerformed(ActionEvent e) {
        if(e.getSource()==clearButton){
            history.clear();
            canvas.repaint();
        }

    }

    @Override
    public void mouseDragged(MouseEvent e) {
        Command cmd=new DrawCommand(canvas,e.getPoint());
        history.append(cmd);
        cmd.execute();

    }

    @Override
    public void mouseMoved(MouseEvent e) {

    }

    @Override
    public void windowOpened(WindowEvent e) {

    }

    @Override
    public void windowClosing(WindowEvent e) {
        System.exit(0);

    }

    @Override
    public void windowClosed(WindowEvent e) {

    }

    @Override
    public void windowIconified(WindowEvent e) {

    }

    @Override
    public void windowDeiconified(WindowEvent e) {

    }

    @Override
    public void windowActivated(WindowEvent e) {

    }

    @Override
    public void windowDeactivated(WindowEvent e) {

    }

    public static void main(String[] args){
        new Main("Command pattern Sample");
    }
}
