package com.cjj.designpattern.behavioral.command.drawer;

/**
 * Created by chenjj on 2019/1/2
 */
public interface Drawable {
    public abstract void draw(int x,int y);
}
